@@ -14,6 +14,9 @@ HISTORY of collective.pwexpiry
 - Redirect to $portal_url/mail_password_form instead of just /mail_password_form
   [enfold-josh]
 
+- Alter notification email to support days <= 0.
+  [enfold-josh]
+
 
 0.6 (2015-03-13)
 ----------------
